# high-precision-calculator

./: .pnp.cjs  Cargo.toml  README.md  package.json
calculator/src/: ast.rs  eval.rs  formatting.rs  lib.rs  main.rs  parser.rs
src/: App.svelte  ast.rs  context.rs  eval.rs  lib.rs  main.rs  parser.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Calc.svelte
