[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[lib]
#crate-type = ["cdylib", "rlib"]

[dependencies]
#num = "0.4.0"
#rug = "1.19.2"
#dashu = "0.3.1"
#astro-float-num = { version = "0.1.5", default-features = false, features = ["std"] }
astro-float = "0.6.8"
dyn-clone = "1.0.11"
nom = "7.1.3"
wasm-bindgen = "0.2.84"
